--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,7 @@
 <h1>id:<%= @task.id %>のタスク詳細ページ</h1>
 
 <p><%= message.content%></p>
+
+<%= link_to "タスク一覧に戻る",tasks_path %>
+<%= link_to 'このタスクを編集する', edit_task_path(@task) %>
+<%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
