--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,8 +2,8 @@
 
 <ul>
   <% @tasks.each do |task| %>
-    <li><%= link_to task.id,task %><%= task.content %></li>
+    <li><%= link_to task.id,task %> : <%= task.content %></li>
   <% end %>  
 </ul>
 
-<%= link_to "新規タスクの登録",new_task_path %>
+<%= link_to "新規タスクの登録", new_task_path %>
