--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,10 +1,5 @@
 <h1>タスク新規作成ページ</h1>
 
-<%= form_with(model: @task, local: true) do |f| %>
-  <%= f.label :content,"task" %>
-  <%= f.text_field :content %>
-  
-  <%= f.submit "登録"%>
-<% end %>
+<%= render "form", task: @task %>
 
 <%= link_to "タスク一覧に戻る",tasks_path %>
