--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,5 +1,7 @@
 <h1>id:<%= @task.id %>のタスク詳細ページ</h1>
 
+<p><%= @task.status %></p>
+
 <p><%= @task.content %></p>
 
 <%= link_to "タスク一覧に戻る",tasks_path %>
