--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
   
-  <%= f.label :status, 'タスク名' %>
+  <%= f.label :status, 'ステータス' %>
   <%= f.text_field :status %>
 
   <%= f.label :content, '内容' %>
