--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,4 @@
+
 <h1>タスク一覧</h1>
 
 <ul>
@@ -5,5 +6,6 @@
     <li><%= link_to task.id, task %> : <%= task.status %> &gt; <%= task.content %></li>
   <% end %>  
 </ul>
+<%= paginate @tasks %>
 
 <%= link_to "新規タスクの登録", new_task_path %>
