--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,9 +1,19 @@
 <header class="mb-4">
-    <nav class="navbar navbar-expand navbar-light bg-light fixed-top">
+  <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
     <a class="navbar-brand" href= "/">TaskMaker</a>
-    <ul class="navbar-nav">
-      <li class="nav-item"><%= link_to "新規登録はこちら", signup_path, class: "nav-link" %></li>
-      <li class="nav-item"><%= link_to "ログイン", signup_path, class: "nav-link" %></li>
-    </ul>
+    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#nav-bar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+        <% if logged_in? %>
+          <li class="nav-item pr-2"><%= link_to "新規タスクの登録", new_task_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "ログアウト", logout_path, method: :delete, class: "nav-link" %></li>
+        <% else %>
+          <li class="nav-item pr-2"><%= link_to "新規登録はこちら", signup_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "ログイン", login_path, class: "nav-link" %></li>
+        <% end %>
+      </ul>
+    </div>
   </nav>
 </header>
