--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,9 +3,7 @@
 
 <ul>
   <% @tasks.each do |task| %>
-    <li><%= link_to task.id, task %> : <%= task.status %> &gt; <%= task.content %></li>
+    <li><%= link_to task.id, task %> : <%= task.status %> &gt; <%= task.content %><span class="text-muted">登録日時:<%= task.created_at %></span></li>
   <% end %>  
 </ul>
 <%= paginate @tasks %>
-
-<%= link_to "新規タスクの登録", new_task_path %>
