--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -1,3 +1,5 @@
-<%= flash.each do |message_type, message| %>
-  <div class="alert alert-<%= message_type %>"><%= message%></div>
+<% if flash.any? %>
+  <% flash.each do |message_type, message| %>
+  <div class="alert alert-<%= message_type %>"><%= message %></div>
+  <% end %>
 <% end %>
