--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,21 +1,12 @@
 <%= form_with(model: task, local: true) do |f| %>
-  <% if task.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(task.errors.count, "error") %> prohibited this message from being saved:</h2>
-
-      <ul>
-        <% task.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= form_with(model: @task, local: true) do |f| %>
   
-  <%= f.label :status, 'ステータス' %>
-  <%= f.text_field :status %>
+    <%= f.label :status, 'ステータス' %>
+    <%= f.text_field :status %>
+  
+    <%= f.label :content, '内容' %>
+    <%= f.text_field :content %>
+    <%= f.submit '登録' %>
+  <% end %>
 
-  <%= f.label :content, '内容' %>
-  <%= f.text_field :content %>
-
-  <%= f.submit '登録' %>
 <% end %>
