--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,6 @@
 <h1>タスク新規作成ページ</h1>
+<%= render "layouts/error_messages", model: @task %>
 
-<%= render "form", task: @task %>
+<%= render 'form', task: @task %>
 
 <%= link_to "タスク一覧に戻る",tasks_path %>
