--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,12 +19,12 @@
       
       <div class="form-group">
         <%= f.label :password, "Password" %>
-        <%= f.text_field :password, class: "form-control"%>
+        <%= f.password_field :password, class: "form-control"%>
       </div>
       
       <div class="form-group">
         <%= f.label :password_confirmation, "Password" %>
-        <%= f.text_field :password_confirmation, class: "form-control"%>
+        <%= f.password_field :password_confirmation, class: "form-control"%>
       </div>
       
       <%= f.submit "登録する", class: "btn btn-primary btn-block" %>
