kadai-tasklist-complete-3

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_with(model: task, local: true) do |f| %>
   <%= form_with(model: @task, local: true) do |f| %>
-  
+    <%= render "layouts/error_messages", model: @task %>
+    
     <%= f.label :status, 'ステータス' %>
     <%= f.text_field :status %>
   
