--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,7 +14,7 @@
       
       <div class="form-group">
         <%= f.label :email, "Email" %>
-        <%= f.text_field :email, class: "form-control" %>
+        <%= f.email_field :email, class: "form-control" %>
       </div>
       
       <div class="form-group">
